# gempyor2

./: README.md  justfile  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yaml
docs/: index.md
docs/guides/: getting-started.md
examples/: simple_sir.py
src/gempyor2/: __init__.py  _utils.py  core_solver.py  flepi_model.py  matrix_ops.py  model_core.py  parser.py
tests/: test__version__.py  test_core_solver.py  test_diffusion_convergence.py  test_flepi_modelpy.py  test_matrix_ops.py  test_model_core.py  test_parsing_basics.py  test_reaction_diffusion_imex.py
