[project]
name = "gempyor2"
version = "0.1.0"
description = "Vectorized compartmental model for flepimop2"
readme = "README.md"
authors = [
    { name = "Carl Pearson", email = "cap1024@unc.edu" },
    { name = "Joshua Macdonald", email = "jmacdo16@jh.edu" },
    { name = "Timothy Willard", email = "twillard@unc.edu" }
]
requires-python = ">=3.11,<=3.14"
dependencies = [
    "flepimop2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "ruff>=0.13.3",
    "sybil[pytest]>=9.2.0",
]

[tool.pytest.ini_options]
testpaths = [
    "docs/",
    "src/gempyor2/",
    "tests/",
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 72

[tool.ruff.lint]
select = [
    "ALL",
]
ignore = [
    "COM812",  # Missing trailing comma, not needed when used with the formatter
    "CPY001",  # Missing copyright notice at top of file
    "D203",    # 1 blank line required before class docstring
    "D212",    # Multi-line docstring summary should start at the first line
    "PLR2004", # Consider replacing magic number with a constant variable
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = [
    "INP001",  # Implicit namespace package
    "S101",    # Use of `assert` detected
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.uv.sources]
flepimop2 = { git = "https://github.com/ACCIDDA/flepimop2" }
