[project]
name = "gempyor2"
version = "0.1.0"
description = "Vectorized compartmental model for flepimop2"
readme = "README.md"
authors = [
    { name = "Carl Pearson", email = "cap1024@unc.edu" },
    { name = "Joshua Macdonald", email = "jmacdo16@jh.edu" },
    { name = "Timothy Willard", email = "twillard@unc.edu" }
]
requires-python = ">=3.11,<=3.14"
dependencies = [
    "PyYAML>=6.0",
    "pydantic>=2.7",
    "numpy>=1.26",
    "scipy>=1.11",
]

[project.optional-dependencies]
data = [
    "pandas>=2.2",
    "pyarrow>=16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "ruff>=0.13.3",
    "sybil[pytest]>=9.2.0",
    "types-PyYAML>=6.0.12.20240917",
]

[tool.pytest.ini_options]
testpaths = [
    "docs/",
    "src/gempyor2/",
    "tests/",
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 72

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "CPY001",
    "D203",
    "D212",
    "PLR2004",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["INP001", "S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.uv.sources]
flepimop2 = { git = "https://github.com/ACCIDDA/flepimop2" }

